# docker-dbdump

./: .gitignore  Dockerfile  README.md  TODOs  docker-compose.yml  pyproject.toml
docker_db_dump/: __init__.py  weg.py
docker_dbdump/: __init__.py  backup.py
