[tool.poetry]
name = "docker-db-dump"
version = "0.1.0"
description = ""
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
stdeb = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
